infrastructure/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${gateway_name}
#  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: nginx
  listeners:
    - name: dummy
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
#    - name: http
#      port: 80
#      protocol: HTTP
#      hostname: podinfo.symplectic.internal
#      allowedRoutes:
#        namespaces:
#          from: All
#    - name: https
#      port: 443
#      protocol: HTTPS
#      hostname: podinfo.symplectic.internal
#      allowedRoutes:
#        namespaces:
#          from: All
#      tls:
#        mode: Terminate
#        certificateRefs:
#          - name: podinfo-cert

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
spec:
  parentRefs:
    - name: ${gateway_name}
      namespace: ${gateway_namespace}
#    - name: frontend
#      namespace: networking
      sectionName: http4
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
